fixed menu overlapping

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -11,7 +11,7 @@
 .menu-bar-container {
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 5;
 }
 
 .nav-bar {
